test/libsolidity/syntaxTests/nameAndTypeResolution/527_fallback_marked_internal.sol
contract C {
    fallback () internal { }
}
// ----
// TypeError: (17-41): Fallback function must be defined as "external".
